# spaczz

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  <_io.BufferedRandom name=10>.jsonl  CHANGELOG.md  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: coverage.yml  lint-check-test.yml  release-drafter.yml  release.yml  tests.yml
annotacy/: annotacy.py  fuzzy.py
annotacy/tests/: test.py
docs/: conf.py  index.rst  reference.rst  requirements.txt
examples/: countries.json  countries.py  fuzzy_matching_tweaks.md
examples/patterns/: fregex_phrase_countries0.jsonl  fregex_phrase_countries1.jsonl  fregex_phrase_countries3.jsonl  fregex_token_countries1.jsonl  fuzzy_phrase_countries.jsonl  fuzzy_token_countries.jsonl  phrase_countries.jsonl  raw_countries.json  token_countries.jsonl
matchy/: __init__.py  fuzzy.py  fuzzysearch.py  regex.py
matchy/matcher/: fuzzymatcher.py
matchy/pipeline/: __init__.py  matchyruler.py
matchy/tests/: test.py
notebooks/: README.ipynb  fuzzy_matching_tweaks.ipynb  test.txt
notebooks/patterns/: raw_countries.json
spaczz/: fuzzysearch.py  regexconfig.py  regexsearch.py  util.py
spaczz/matcher/: __init__.py  fuzzymatcher.py  regexmatcher.py
spaczz/pipeline/: matchyruler.py  spaczzruler.py
src/spaczz/: __init__.py  _commonregex.py  _fuzz.py  _types.py  attrs.py  commonregex.py  customattrs.py  customtypes.py  exceptions.py  fuzz.py  process.py  util.py
src/spaczz/_search/: __init__.py  fuzzysearcher.py  phrasesearcher.py  regexsearcher.py  searchutil.py  similaritysearcher.py  tokensearcher.py
src/spaczz/fuzz/: __init__.py  fuzzyconfig.py  fuzzysearch.py  fuzzysearcher.py
src/spaczz/matcher/: __init__.py  _phrasematcher.py  fuzzymatcher.py  matchutil.py  regexmatcher.py  similaritymatcher.py  spaczzmatcher.py  tokenmatcher.py
src/spaczz/pipeline/: __init__.py  _spaczzruler.py  _spaczzruler_legacy.py  spaczzruler.py
src/spaczz/regex/: __init__.py  _commonregex.py  regexconfig.py  regexsearch.py  regexsearcher.py
src/spaczz/registry/: __init__.py  fuzzyfuncs.py  repatterns.py  reweights.py
src/spaczz/search/: __init__.py  _phrasesearcher.py  _process.py  fuzzysearcher.py  regexsearcher.py  searchutil.py  similaritysearcher.py  tokensearcher.py  util.py
src/spaczz/similarity/: __init__.py  similaritysearcher.py
tests/: conftest.py  test.py  test__fuzz.py  test_attrs.py  test_customattrs.py  test_fuzz.py  test_fuzzyconfig.py  test_fuzzymatcher.py  test_fuzzysearch.py  test_process.py  test_regexconfig.py  test_regexmatcher.py  test_regexsearch.py  test_spaczzruler.py  test_util.py
tests/fixtures/: countries.json
tests/test__search/: __init__.py  test_fuzzysearcher.py  test_phrasesearcher.py  test_regexsearcher.py  test_searchutil.py  test_similaritysearcher.py  test_tokensearcher.py
tests/test_fuzz/: test_fuzzyconfig.py  test_fuzzysearch.py  test_fuzzysearcher.py
tests/test_matcher/: __init__.py  test__phrasematcher.py  test_fuzzymatcher.py  test_regexmatcher.py  test_similaritymatcher.py  test_spaczzmatcher.py  test_tokenmatcher.py
tests/test_pipeline/: __init__.py  test_spaczzattrs.py  test_spaczzruler.py
tests/test_regex/: __init__.py  test_regexconfig.py  test_regexsearch.py  test_regexsearcher.py
tests/test_registry/: test_fuzzyfuncs.py  test_repatterns.py  test_reweights.py
tests/test_search/: test__phrasesearcher.py  test_fuzzysearcher.py  test_regexsearcher.py  test_searchutil.py  test_similaritysearcher.py  test_tokensearcher.py  test_util.py
tests/test_similarity/: test_similaritysearcher.py
