[tool.poetry]
name = "spaczz"
version = "0.6.0a0"
description = "Adds fuzzy matching and additional regex matching support to spaCy."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gandersen101/spaczz"
repository = "https://github.com/gandersen101/spaczz"
keywords = ["fuzzy matching", "spacy", "nlp"]
authors = ["Grant Andersen <gandersen.codes@gmail.com>"]
documentation = "https://spaczz.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7"
spacy = ">= 2.2, < 4.0"
regex = ">=2020.6.8"
importlib_metadata = {version = "*", python = "<3.8"}
rapidfuzz = ">=1.0, < 3.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
pytest = "*"
coverage = {version = "*", extras = ["toml"]}
pytest-cov = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-bandit = "*"
safety = "*"
flake8-import-order = "*"
mypy = ">=0.9"
flake8-annotations = "*"
flake8-docstrings = "*"
darglint = "*"
xdoctest = "*"
sphinx = ">=4.0.2, <5.0"
rstcheck = "*"
sphinx-autodoc-typehints = "*"
sphinx-autobuild = "*"
codecov = "*"
ipykernel = "*"

[tool.poetry.plugins."spacy_factories"]
"spaczz_ruler" = "spaczz.pipeline:SpaczzRuler"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spaczz"]

[tool.coverage.report]
show_missing = true

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "regex",
    "spacy.*",
    "srsly",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
